--- a/html e css/flexbox/index.html
+++ b/html e css/flexbox/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <header>
-    <div class="header-inner">
+    <div class="header-area">
       <div class="logo"></div>
     </div>
   </header>
