--- a/html e css/desafio01/index.html
+++ b/html e css/desafio01/index.html
@@ -8,6 +8,7 @@
     <title>Modulo01</title>
 </head>
 <body>
+    <script src="calc.js"></script>
     <section class="simulador">
     <h1>Simulador de Financiamento</h1>
     <div class="inputs">
@@ -24,7 +25,7 @@
     <input type="text" placeholder=" ex:0,08" name="juros">
  </div>
 </div>
-<button type="button" name="simular">Simular</button>
+<button type="button" name="simular" id="simular">Simular</button>
 </section>
 <section class="results">
     <h1>Resultados</h1>
