--- a/html e css/doom/fomulario/index.html
+++ b/html e css/doom/fomulario/index.html
@@ -7,7 +7,14 @@
     <title>Formulario de cadastro</title>
 </head>
 <body>
+    <form>
     <h1>Formulario de cadastro</h1>
-    
+    <label for="">Nome: <input type="text" name="nome"></label>
+<fieldset class="multiple-field">
+    <legend>Telefones</legend>
+    <input type="text" name="telefone">
+</fieldset>
+</form>
+<script src="script.js"></script>
 </body>
 </html>
